Modified build script to automatically generate bundle.js with INFORMATION.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
-    "build": "tsc"
+    "build": "tsc && type INFORMATION > tmp && type bundle.js >> tmp && type tmp > bundle.js && del tmp"
   },
   "keywords": [],
   "author": "",
