--- a/package.json
+++ b/package.json
@@ -6,13 +6,28 @@
   "scripts": {
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
-    "build": "tsc && type INFORMATION > tmp && type bundle.js >> tmp && type tmp > bundle.js && del tmp"
+    "build": "webpack && type INFORMATION > .\\dist\\tmp && type .\\dist\\main.js >> .\\dist\\tmp && type .\\dist\\tmp > .\\dist\\main.js && del .\\dist\\tmp"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.17.5",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "typescript": "^4.5.5"
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "babel-loader": "^8.2.3",
+    "react-codemod": "^5.4.3",
+    "typescript": "^4.5.5",
+    "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.17.2",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.13",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
