--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "babel-loader": "^8.2.3",
+    "eslint": "^8.10.0",
+    "eslint-plugin-react": "^7.29.3",
     "react-codemod": "^5.4.3",
     "typescript": "^4.5.5",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.17.2",
+    "@geist-ui/core": "^2.3.5",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "react": "^17.0.2",
