--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "rootDir": "src",
     "target": "ES6",
-    "jsx": "react"
+    "jsx": "react",
+    "moduleResolution": "Node"
   }
 }
