--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^8.2.3",
     "eslint": "^8.10.0",
     "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "react-codemod": "^5.4.3",
     "typescript": "^4.5.5",
     "webpack-cli": "^4.9.2"
