--- a/babel.config.json
+++ b/babel.config.json
@@ -1,10 +1,31 @@
 {
   "presets": [
-    "@babel/preset-env",
-    "@babel/preset-react",
-    "@babel/preset-typescript"
+    [
+      "@babel/preset-env"
+    ],
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic"
+      }
+    ],
+    [
+      "@babel/preset-typescript",
+      {
+        "allExtensions": true,
+        "isTSX": true
+      }
+    ]
   ],
   "plugins": [
-    ["@babel/plugin-transform-react-jsx", { "runtime": "automatic" }]
+    [
+      "@babel/plugin-transform-runtime"
+    ],
+    [
+      "@babel/plugin-transform-react-jsx",
+      {
+        "runtime": "automatic"
+      }
+    ]
   ]
 }
