--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-typescript": "^7.16.7",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.3",
     "eslint": "^8.10.0",
     "eslint-plugin-react": "^7.29.3",
